# RecurrenceMicrostates

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/includes/: RecurrenceMicrostates.h
python/: setup.py
python/lib/: lib.cpp
src/: microstates.h  settings.cpp  settings.h
test/: CMakeLists.txt  main.cpp
